--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.androidtime.mvp"
-        minSdkVersion 14
+        minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -31,9 +31,14 @@ dependencies {
 
     // recycler view
     compile 'com.android.support:recyclerview-v7:23.3.0'
-    compile 'com.android.support:cardview-v7:22.0.0'
+    compile 'com.android.support:cardview-v7:23.3.0'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
 
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.github.mancj:MaterialSearchBar:0.3.1'
+
+    compile 'br.com.mauker.materialsearchview:materialsearchview:1.2.0'
+
+    compile 'com.jakewharton:butterknife:8.4.0'
 
 }
