--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,12 +4,6 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-    <provider
-        android:name="br.com.mauker.materialsearchview.db.HistoryProvider"
-        android:authorities="br.com.mauker.materialsearchview.searchhistorydatabase"
-        android:exported="false"
-        android:protectionLevel="signature"
-        android:syncable="true" />
 
     <application
         android:allowBackup="true"
@@ -20,7 +14,7 @@
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateVisible|adjustPan">
+            android:windowSoftInputMode="stateVisible|adjustNothing">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
