--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "com.androidtime.mvp"
+        applicationId "com.ekhanei.mvp"
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
@@ -23,21 +23,13 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.mcxiaoke.volley:library:1.0.19'
-
-    // retrofit, gson
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.squareup.retrofit2:retrofit:2.0.2'
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
-
-    // recycler view
     compile 'com.android.support:recyclerview-v7:23.3.0'
     compile 'com.android.support:cardview-v7:23.3.0'
-    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
-
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.github.mancj:MaterialSearchBar:0.3.1'
-
     compile 'com.jakewharton:butterknife:8.4.0'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
 
